integration with gg is done

--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GG_API_URL=http://gidrogeologiya/api
+GM_API_URL=http://gidromet/api
+MV_API_URL=http://minvodxoz/api
+
